--- a/components/Fields/Toggle.mdx
+++ b/components/Fields/Toggle.mdx
@@ -4,7 +4,7 @@ menu: Inputs
 ---
 
 import { Playground, PropsTable } from 'docz'
-import Field from './Field';
+import Field from '../../utils/docz/Field';
 import { Toggle } from './'
 import '../../styles/_all.scss';
 
